--- a/Client/src/Components/common/layouts/Header/navigationLinks/CartNavigationLink/CartDropDown/Cart.css
+++ b/Client/src/Components/common/layouts/Header/navigationLinks/CartNavigationLink/CartDropDown/Cart.css
@@ -1,10 +1,10 @@
 .c-Cart {
-  position: absolute;
+  position: fixed;
   background-color: white;
   -webkit-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4);
   top: 40px;
-  right: 5px;
+  right: 35px;
   padding: 13px;
   max-height: 20px;
   width: 300px;
